k8s/factorio-backup/ingress-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factorio-minio-console
  namespace: factorio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - factorio-minio.json-server.win
      secretName: factorio-minio-console-tls
  rules:
    - host: factorio-minio.json-server.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: factorio-backup-minio-console
                port:
                  number: 9001
